--- a/Description
+++ b/Description
@@ -1,1 +1,7 @@
+In our dailylives, we are pretty acquainted with ample of transporatation paths & etc. Mainly in factories, industries, offices,
+we met with different paths to pass the objects or things from one place to another place or vce-versa. For this they mostly use 
+pentra cars with driver and all.
 
+The idea of this project mainly on this.This projects aim is to be follow the pre-defined path accordingly program. For instance, 
+For an instance,in one particular industry we set path like from source to destination. If we put this robot there this can take 
+all the things and objects 
